@@ -1,3 +1,8 @@
+2006-07-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* setup_tools/check_perlthreading.pl: Quick test of multithreading
+	support
+
 2006-07-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Collector/RRDStorage.pm (updateRRD):
